# sway-autotiler

./: Cargo.toml  README.md
src/: main.rs
