[package]
name = "sway_autotiler"
version = "0.1.0"
edition = "2024"

[dependencies]
swayipc = "4.0.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize size reduction
strip = true        # Strip symbols from the binary
panic = "abort"     # Remove panic unwinding overhead
